# artifacts/api-server/src/routes/index.ts
@@ -3,7 +3,6 @@ import healthRouter from "./health";
 import coursesRouter from "./courses";
 import lessonsRouter from "./lessons";
 import resourcesRouter from "./resources";
-import projectsRouter from "./projects";
 import teacherPlansRouter from "./teacher_plans";
 import progressRouter from "./progress";
 import statsRouter from "./stats";
@@ -16,7 +15,6 @@ router.use(usersRouter);
 router.use(coursesRouter);
 router.use(lessonsRouter);
 router.use(resourcesRouter);
-router.use(projectsRouter);
 router.use(teacherPlansRouter);
 router.use(progressRouter);
 router.use(statsRouter);
